clean out source-nso

--- a/casestudy-nso-01/Makefile
+++ b/casestudy-nso-01/Makefile
@@ -7,13 +7,13 @@ clean: clean-nso clean-netsim
 start-apps: start-netsim start-nso check-nso-up
 stop-apps: stop-netsim stop-nso
 
-source-nso: 
-	source ~/nso/ncsrc 
+setup-nso:
+	ncs-setup \
+		--package ~/nso/packages/neds/cisco-ios-cli-6.77 \
+		--package ./acl-service \
+		--dest .
 
-setup-nso: source-nso
-	ncs-setup --package ~/nso/packages/neds/cisco-ios-cli-6.77 --dest .
-
-clean-nso: source-nso stop-nso
+clean-nso: stop-nso
 	rm -rf logs/ ncs-cdb/ packages/ scripts/ state/ ncs.conf README.ncs target/ storedstate
 
 start-nso: 
@@ -23,19 +23,19 @@ check-nso-up:
 	echo "Waiting for NSO to be available"
 	while :; do curl -sSf -o /dev/null -u admin:admin http://localhost:8080/.well-known/host-meta && break; sleep 5; done
 
-stop-nso: source-nso
+stop-nso:
 	-ncs --stop 
 
 syncfrom:  
 	curl -X POST -u admin:admin http://localhost:8080/restconf/data/tailf-ncs:devices/sync-from
 
-setup-netsim: source-nso 
+setup-netsim: 
 	ncs-netsim create-network cisco-ios-cli-6.77 2 ios-
 
-clean-netsim: source-nso stop-netsim
+clean-netsim: stop-netsim
 	rm -rf netsim/ README.netsim
 
-start-netsim: source-nso 
+start-netsim: 
 	ncs-netsim start 
 
 stop-netsim: 
