Remove undeeded minputs.

--- a/casestudy-telemetry-01/telegraf/etc/telegraf.conf
+++ b/casestudy-telemetry-01/telegraf/etc/telegraf.conf
@@ -533,7 +533,7 @@ omit_hostname = false
 [[outputs.file]]
 #   ## Files to write to, "stdout" is a specially handled file.
 #   files = ["stdout", "/tmp/metrics.out"]
-files = ["/tmp/metrics.json"]
+files = ["/tmp/metrics/metrics.json"]
 #
 #   ## Use batch serialization format instead of line based delimiting.  The
 #   ## batch format allows for the production of non line based output formats and
@@ -1982,27 +1982,27 @@ json_timestamp_units = "1s"
 ###############################################################################
 
 # Read metrics about cpu usage
-[[inputs.cpu]]
+#[[inputs.cpu]]
 ## Whether to report per-cpu stats or not
-percpu = true
+#percpu = true
 ## Whether to report total system cpu stats or not
-totalcpu = true
+#totalcpu = true
 ## If true, collect raw CPU time metrics.
-collect_cpu_time = false
+#collect_cpu_time = false
 ## If true, compute and report the sum of all non-idle CPU states.
-report_active = false
+#report_active = false
 
 # Read metrics about disk usage by mount point
-[[inputs.disk]]
+#[[inputs.disk]]
 ## By default stats will be gathered for all mount points.
 ## Set mount_points will restrict the stats to only the specified mount points.
 # mount_points = ["/"]
 
 ## Ignore mount points by filesystem type.
-ignore_fs = ["tmpfs", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squashfs"]
+#ignore_fs = ["tmpfs", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squashfs"]
 
 # Read metrics about disk IO by device
-[[inputs.diskio]]
+#[[inputs.diskio]]
 ## By default, telegraf will gather stats for all devices including
 ## disk partitions.
 ## Setting devices will restrict the stats to the specified devices.
@@ -2030,23 +2030,23 @@ ignore_fs = ["tmpfs", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squash
 # name_templates = ["$ID_FS_LABEL","$DM_VG_NAME/$DM_LV_NAME"]
 
 # Get kernel statistics from /proc/stat
-[[inputs.kernel]]
+#[[inputs.kernel]]
 # no configuration
 
 # Read metrics about memory usage
-[[inputs.mem]]
+#[[inputs.mem]]
 # no configuration
 
 # Get the number of processes and group them by status
-[[inputs.processes]]
+#[[inputs.processes]]
 # no configuration
 
 # Read metrics about swap memory usage
-[[inputs.swap]]
+#[[inputs.swap]]
 # no configuration
 
 # Read metrics about system load & uptime
-[[inputs.system]]
+#[[inputs.system]]
 ## Uncomment to remove deprecated metrics.
 # fielddrop = ["uptime_format"]
 
