clean fxs file from repo

--- a/casestudy-nso-01/Makefile
+++ b/casestudy-nso-01/Makefile
@@ -25,6 +25,7 @@ setup-nso-solution:
 
 clean-nso: stop-nso
 	rm -rf logs/ ncs-cdb/ packages/ scripts/ state/ ncs.conf README.ncs target/ storedstate
+	rm -rf acl-service/load-dir
 
 start-nso: 
 	ncs
